change toaster-featured.c to .cpp, link ok, trying.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@165 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/func_featured_vs2010/func_featured_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_featured_vs2010/func_featured_vs2010.vcxproj
@@ -228,11 +228,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\func\featured\poWer.c" />
-    <ClCompile Include="..\func\featured\toaster-featured.c" />
+    <ClCompile Include="..\func\featured\toaster-featured.cpp" />
     <ClCompile Include="..\func\featured\wMi.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\func\featured\toaster.h" />
+    <ClInclude Include="..\func\shared\toaster.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\func\featured\toaster.rc" />
