Toaster kmdf BusDynamic VC2010 prj ok.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@194 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
@@ -53,7 +53,7 @@
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
     <TargetExt>.sys</TargetExt>
-    <TargetName>BusStat</TargetName>
+    <TargetName>BusDynamic</TargetName>
     <OutDir>$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -64,7 +64,7 @@
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
     <TargetExt>.sys</TargetExt>
-    <TargetName>BusStat</TargetName>
+    <TargetName>BusDynamic</TargetName>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
