BusDynamic: .c -> .cpp , run ok.
BUSenum.h rejects the bloated sys-header <ntintsafe.h>

git-svn-id: svn://10.22.3.84/windrv-learning/trunk@195 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_dynamic_vs2010/bus_dynamic_vs2010.vcxproj
@@ -215,12 +215,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\bus\dynamic\BUSenum.c" />
-    <ClCompile Include="..\bus\dynamic\BUSpdo.c" />
+    <ClCompile Include="..\bus\dynamic\BUSenum.cpp" />
+    <ClCompile Include="..\bus\dynamic\BUSpdo.cpp" />
     <ClCompile Include="..\bus\dynamic\WMI.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\bus\dynamic\busenum.h" />
+    <ClInclude Include="..\bus\dynamic\BUSenum.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\bus\dynamic\BUSenum.mof">
