a bit tweak to filter.rc
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@206 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/filter_generic_vs2010/filter_generic_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/filter_generic_vs2010/filter_generic_vs2010.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{AAE14642-CB46-449B-B30F-2016CCCC0020}</ProjectGuid>
+    <ProjectGuid>{FEDED036-A6C0-4F41-997B-D67B9E8E2631}</ProjectGuid>
     <ProjectName>kmdf_filter_generic</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -228,6 +228,10 @@
       <SuppressStartupBanner Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</SuppressStartupBanner>
       <SuppressStartupBanner Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</SuppressStartupBanner>
       <SuppressStartupBanner Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</SuppressStartupBanner>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </PreprocessorDefinitions>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </AdditionalIncludeDirectories>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
