wdmsec.lib is required by Kmdf sideband filter, so add it.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@210 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/virtualddk.props
+++ b/wdk7-samples/toaster/virtualddk.props
@@ -21,7 +21,7 @@
       <PreprocessorDefinitions Condition="'$(Platform)'=='x64'">_WIN32_WINNT=0x0601;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>WdfDriverEntry.lib;WdfLdr.lib;wmilib.lib;ntoskrnl.lib;hal.lib;ntstrsafe.lib;ksecdd.lib;BufferOverflowK.lib</AdditionalDependencies>
+      <AdditionalDependencies>WdfDriverEntry.lib;WdfLdr.lib;wmilib.lib;ntoskrnl.lib;hal.lib;ntstrsafe.lib;ksecdd.lib;BufferOverflowK.lib;wdmsec.lib</AdditionalDependencies>
       <AdditionalDependencies Condition="'$(Platform)'=='Win32'">int64.lib;exsup.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(TargetPath)</OutputFile>
       <AdditionalLibraryDirectories Condition="'$(Platform)'=='Win32'">$(WDKPATH)\lib\wdf\kmdf\i386\1.9;$(WDKPATH)\lib\wxp\i386;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
