git-svn-id: svn://10.22.3.84/windrv-learning/trunk@211 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/filter/sideband/filter.rc
+++ b/wdk7-samples/toaster/kmdf/filter/sideband/filter.rc
@@ -1,6 +1,8 @@
 #include <windows.h>
-#include <filter.h>
 #include <ntverp.h>
+
+#define NOW_COMPILING_RC // "filter.h" will check this macro to get rid of unnecessary #includes .
+#include "filter.h"
 
 #define VER_FILETYPE                VFT_DRV
 #define VER_FILESUBTYPE             VFT2_DRV_SYSTEM
