minor. x64 SYS build and run verify ok.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@251 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/wdm/func/featured1/Makefile.umk
+++ b/wdk7-samples/toaster/wdm/func/featured1/Makefile.umk
@@ -203,7 +203,7 @@ gmu_uv_list_SUBPRJ_LINK_ALL_LEVEL += # <subprj1-refname> <subprj2-refname> ...
 include $(gmu_DIR_GNUMAKEUNIPROC)/pattern1.mks
 
 
-$(gmp_winres_Gp_RES): toaster.bmf
+$(gmp_RCVS_Gp_RES): toaster.bmf
 
 toaster.bmf: toaster.mof
 	echo ""
