--- a/wdk7-samples/osrusbfx2/kmdf/sys/step4/osrusbfx2_step4.vcxproj
+++ b/wdk7-samples/osrusbfx2/kmdf/sys/step4/osrusbfx2_step4.vcxproj
@@ -215,7 +215,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="step4.c" />
+    <ClCompile Include="step4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\inc\public.h" />
