--- a/wdk7-samples/toaster/kmdf/toastmon_vs2010/toastmon_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/toastmon_vs2010/toastmon_vs2010.vcxproj
@@ -231,7 +231,7 @@
     <ClCompile Include="..\toastmon\WmI.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\func\shared\toaster.h" />
+    <ClInclude Include="..\func\shared\toastmon.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\toastmon\toastmon.rc" />
