神奇。 sources 中写 testapp.c ，bcz 会自动去找 testapp.cpp 编译。
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@317 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/osrusbfx2/kmdf/exe/osrusbfx2_test.vcxproj
+++ b/wdk7-samples/osrusbfx2/kmdf/exe/osrusbfx2_test.vcxproj
@@ -19,8 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="testapp.c" />
-    <ClCompile Include="dump.c" />
+    <ClCompile Include="testapp.cpp" />
+    <ClCompile Include="dump.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="testapp.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AAE14642-CB46-449B-B30F-201610080011}</ProjectGuid>
