--- a/wdk7-samples/osrusbfx2/kmdf/sys/final/osrusbfx2_final.vcxproj
+++ b/wdk7-samples/osrusbfx2/kmdf/sys/final/osrusbfx2_final.vcxproj
@@ -224,6 +224,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\inc\public.h" />
+    <ClInclude Include="osrusbfx2.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="osrusbfx2.inx">
