try C++ virtual function.
MEMO: http://www.evernote.com/l/ABVEXRDfB01B56a3gFIet_WDWjOXtMOe4Ps/

git-svn-id: svn://10.22.3.84/windrv-learning/trunk@345 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_cpp_vs2010/func_simple_cpp_vs2010.vcxproj
@@ -219,6 +219,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="new_delete.cpp" />
     <ClCompile Include="toaster-simple.cpp" />
   </ItemGroup>
   <ItemGroup>
