Chj update: SetupAPI methods now prints device SPDRP_FRIENDLYNAME as well.
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@352 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/enumser/EnumSer.vcxproj
+++ b/enumser/EnumSer.vcxproj
@@ -38,9 +38,12 @@
     <ProjectName>EnumSer</ProjectName>
     <ProjectGuid>{D8C71E7B-4A44-4C2A-9E1F-EF64D909AAEF}</ProjectGuid>
     <RootNamespace>EnumSer</RootNamespace>
-    <SccProjectName>"$/My Code/EnumSer", FDCAAAAA</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccProvider>MSSCCI:Microsoft Visual SourceSafe</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccProvider>
+    </SccProvider>
     <Keyword>MFCProj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -245,7 +248,7 @@
       </HeaderFileName>
     </Midl>
     <ClCompile>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;UNICODE;_UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
@@ -312,7 +315,7 @@
       </HeaderFileName>
     </Midl>
     <ClCompile>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
