Some updates to WMI (still-testing)
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@356 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
@@ -221,12 +221,14 @@
   <ItemGroup>
     <CustomBuild Include="..\featured1\toaster.mof">
       <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">mofcomp -B:toaster.bmf ..\featured1\toaster.mof</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">mofcomp -B:..\featured1\toaster.bmf ..\featured1\toaster.mof
+..\..\..\wmimofck.exe -m -h.\toasterMof.h -w.\htm ..\featured1\toaster.bmf</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling the MOF file toaster.mof ...</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">toaster.bmf</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">mofcomp -B:toaster.bmf ..\featured1\toaster.mof</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\featured1\toaster.bmf</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">mofcomp -B:..\featured1\toaster.bmf ..\featured1\toaster.mof
+..\..\..\wmimofck.exe -m -h.\toasterMof.h -w.\htm ..\featured1\toaster.bmf</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compiling the MOF file toaster.mof ...</Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">toaster.bmf</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\featured1\toaster.bmf</Outputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
