--- a/wdk7-samples/toaster/wdm/bus_vs2010/bus_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/bus_vs2010/bus_vs2010.vcxproj
@@ -217,6 +217,27 @@
   <ItemGroup>
     <ClInclude Include="..\bus\busenum.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\bus\busenum.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\bus\busenum.mof">
+      <LogicalName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">BusEnumWMI</LogicalName>
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">mofcomp -B:..\bus\busenum.bmf ..\bus\busenum.mof
+..\..\wmimofck.exe -m -h.\busenumMof.h -w.\htm ..\bus\busenum.bmf</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\bus\busenum.bmf</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">mofcomp -B:..\bus\busenum.bmf ..\bus\busenum.mof
+..\..\wmimofck.exe -m -h.\busenumMof.h -w.\htm ..\bus\busenum.bmf</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">mofcomp -B:..\bus\busenum.bmf ..\bus\busenum.mof
+..\..\wmimofck.exe -m -h.\busenumMof.h -w.\htm ..\bus\busenum.bmf</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">mofcomp -B:..\bus\busenum.bmf ..\bus\busenum.mof
+..\..\wmimofck.exe -m -h.\busenumMof.h -w.\htm ..\bus\busenum.bmf</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\bus\busenum.bmf</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\bus\busenum.bmf</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\bus\busenum.bmf</Outputs>
+    </CustomBuild>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
