--- a/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
@@ -229,6 +229,11 @@
 ..\..\..\wmimofck.exe -m -h.\toasterMof.h -w.\htm ..\featured1\toaster.bmf</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compiling the MOF file toaster.mof ...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\featured1\toaster.bmf</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">mofcomp -B:..\featured1\toaster.bmf ..\featured1\toaster.mof</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">mofcomp -B:..\featured1\toaster.bmf ..\featured1\toaster.mof
+..\..\..\wmimofck.exe -m -h.\toasterMof.h -w.\htm ..\featured1\toaster.bmf</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\featured1\toaster.bmf</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\featured1\toaster.bmf</Outputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
