WDM filter project update
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@363 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/wdm/filter/filter.rc
+++ b/wdk7-samples/toaster/wdm/filter/filter.rc
@@ -1,6 +1,7 @@
 #include <windows.h>
-#include <filter.h>
 #include <ntverp.h>
+
+#include "filter-drivername.h"
 
 #define VER_FILETYPE                VFT_DRV
 #define VER_FILESUBTYPE             VFT2_DRV_SYSTEM
