minor comment, feature2 not tested today
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@373 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/wdm/func/featured2_vs2010/featured2_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured2_vs2010/featured2_vs2010.vcxproj
@@ -211,7 +211,7 @@
     <ClCompile Include="..\featured2\POwer.C" />
     <ClCompile Include="..\featured2\TOaster.c" />
     <ClCompile Include="..\featured2\wake.c" />
-    <ClCompile Include="..\featured2\wmi.c" />
+    <ClCompile Include="..\featured2\WMi.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\featured2\POwer.h" />
